tests/errors/common1.f90
subroutine solsy ()
    double precision rowns(209)
    common /rowns/ rowns(209)
end
